DEVENV: konfiguration för fitnesse-körning mot NMTs fitnesse-server